feat: add vscode config

--- a/biome.json
+++ b/biome.json
@@ -21,8 +21,12 @@
 			}
 		}
 	},
+	"formatter": {
+		"enabled": false
+	},
 	"javascript": {
 		"formatter": {
+			"enabled": false,
 			"semicolons": "asNeeded",
 			"indentStyle": "space",
 			"quoteStyle": "single",
