--- a/.luarc.json
+++ b/.luarc.json
@@ -1,7 +1,8 @@
 {
     "diagnostics.globals": [
         "vim",
-        "ngx"
+        "ngx",
+        "Snacks"
     ],
     "runtime.version": "LuaJIT",
     "workspace.library": [
