--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -36,7 +36,7 @@
 	"editor.fontSize": 14,
 	"editor.renderWhitespace": "trailing",
 	"editor.lineHeight": 1.2,
-	"editor.codeActionsOnSave": {},
+	"editor.codeActionsOnSave": { },
 	"editor.fontFamily": "FiraCode Nerd Font",
 	"editor.insertSpaces": false,
 	"editor.formatOnSave": true,
@@ -134,8 +134,8 @@
 		"package-lock.json": true,
 		"pnpm-lock.yaml": true
 	},
-	"vscode-neovim.ctrlKeysForInsertMode": [],
-	"vscode-neovim.ctrlKeysForNormalMode": [],
+	"vscode-neovim.ctrlKeysForInsertMode": [ ],
+	"vscode-neovim.ctrlKeysForNormalMode": [ ],
 	"vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
 	"whichkey.delay": 0,
 	"whichkey.showIcons": true,
@@ -775,5 +775,9 @@
 	"workbench.editor.splitOnDragAndDrop": false,
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
-	"workbench.editor.closeOnFileDelete": true
+	"workbench.editor.closeOnFileDelete": true,
+	"editor.accessibilitySupport": "off",
+	"terminal.integrated.env.osx": {
+		"Q_NEW_SESSION": "1"
+	}
 }
