feat: automate commit

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -777,5 +777,6 @@
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
 	"workbench.editor.closeOnFileDelete": true,
-	"biome.suggestInstallingGlobally": false
+	"biome.suggestInstallingGlobally": false,
+	"workbench.statusBar.visible": false
 }
