--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -542,8 +542,11 @@
 						{
 							"key": "t",
 							"name": "󱓊 Status",
-							"type": "command",
-							"command": "workbench.view.scm"
+							"type": "commands",
+							"commands": [
+								"workbench.action.closeAllEditors",
+								"git.openAllChanges"
+							]
 						},
 						{
 							"key": "s",
