feat: automate commit

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -864,5 +864,6 @@
 	"workbench.editor.splitOnDragAndDrop": false,
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
-	"workbench.editor.closeOnFileDelete": true
+	"workbench.editor.closeOnFileDelete": true,
+	"biome.suggestInstallingGlobally": false
 }
