--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -206,7 +206,7 @@
 	"typescript.suggest.includeAutomaticOptionalChainCompletions": true,
 	"typescript.autoClosingTags": true,
 	"[typescript]": {
-		"editor.defaultFormatter": "biomejs.biome"
+		"editor.defaultFormatter": "vscode.typescript-language-features"
 	},
 	"whichkey.bindings": [
 		{
@@ -865,5 +865,6 @@
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
 	"workbench.editor.closeOnFileDelete": true,
-	"editor.occurrencesHighlight": "singleFile"
+	"editor.occurrencesHighlight": "off",
+	"biome.runFromTemporaryLocation": true
 }
