chore: update code reviwe

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -849,6 +849,7 @@
 	"window.density.editorTabHeight": "compact",
 	"window.title": "${folderName}",
 	"window.customTitleBarVisibility": "auto",
+	"window.menuBarVisibility": "hidden",
 	"window.commandCenter": false,
 	"window.titleBarStyle": "native",
 	"window.zoomLevel": 1,
@@ -882,6 +883,5 @@
 	"workbench.editor.splitOnDragAndDrop": false,
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
-	"workbench.editor.closeOnFileDelete": true,
-	"window.menuBarVisibility": "toggle"
+	"workbench.editor.closeOnFileDelete": true
 }
